# Dual_openManipulator_humanoid_ros2

./: README.md
bimanual_setup_description/: CMakeLists.txt  README.md  package.xml
bimanual_setup_description/config/: initial_joint_positions.yaml  ros2_controllers.yaml
bimanual_setup_description/launch/: spawn_bimanual.launch.py
bimanual_setup_description/urdf/: bimanual_setup.urdf.xacro
bimanual_setup_description/urdf/macros/: bimanual_parts.xacro  bimanual_ros2_control.xacro  open_manipulator_x_prefixed.urdf.xacro
bimanual_setup_description/worlds/: lab_empty.world
dual_openmanipulator/: CMakeLists.txt  README.md  package.xml
dual_openmanipulator/config/: dual_moveit.rviz  dual_open_manipulator.srdf  gazebo_controller_manager.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
dual_openmanipulator/launch/: dual_moveit.launch.py  gazebo_dual.launch.py
dual_openmanipulator/urdf/: dual_open_manipulator.ros2_control.xacro  dual_open_manipulator.urdf.xacro  open_manipulator_x_prefixed.urdf.xacro
dual_openmanipulator/worlds/: dual_empty.world
dual_openmanipulator_vslot_sim/: CMakeLists.txt  README.md  package.xml
dual_openmanipulator_vslot_sim/config/: controllers.yaml  dual_arm_vslot_positions.yaml  dual_openmanipulator_vslot.srdf  initial_joint_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ompl_planning.yaml
dual_openmanipulator_vslot_sim/launch/: dual_openmanipulator_vslot_gazebo.launch.py  dual_openmanipulator_vslot_moveit.launch.py
dual_openmanipulator_vslot_sim/rviz/: dual_openmanipulator_vslot.rviz
dual_openmanipulator_vslot_sim/urdf/: dual_openmanipulator_vslot.urdf.xacro
dual_openmanipulator_vslot_sim/urdf/macros/: dual_open_manipulator_vslot.ros2_control.xacro  simple_fixture.xacro  vslot_60x60.xacro
dual_openmanipulator_vslot_sim/worlds/: dual_arm_vslot_demo.world
